# leptos_stuff

./: Cargo.toml  README.md  index.html
docs/: 404.html  index.html  metabased-13f57f2f200ea7c4_bg.wasm  metabased-66103260d3553304.js  metabased-66103260d3553304_bg.wasm  metabased-70b455ac80db0abb.js  metabased-70b455ac80db0abb_bg.wasm
src/: main.rs
