[package]
name = "metabased"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.11", features = ["nightly", "csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
reqwest-wasm = "0.11.16"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
